add coupon search

--- a/src/main/resources/templates/admin/coupon/couponList.html
+++ b/src/main/resources/templates/admin/coupon/couponList.html
@@ -46,12 +46,34 @@
                 <div class="container-xxl flex-grow-1 container-p-y">
                     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Category /</span> List</h4>
 
-                    <!-- Basic Bootstrap Table -->
+                    <!-- Coupon search -->
+                    <form th:action="@{/admin/coupon/search}" method="get" class="mb-4">
+                        <div class="row g-3 align-items-center">
+                            <div class="col-auto">
+                                <label for="couponCode" class="col-form-label">Coupon Code</label>
+                                <input type="text" class="form-control" id="couponCode" name="couponCode" th:field="${couponSearch.couponCode}" />
+                            </div>
+                            <div class="col-auto">
+                                <label for="typeCoupon" class="col-form-label">Type</label>
+                                <select class="form-select" id="typeCoupon" name="typeCoupon" th:field="${couponSearch.typeCoupon}">
+                                    <!-- Add options for coupon types -->
+                                    <option value="DIRECT">Direct</option>
+                                    <option value="PERCENT">Indirect</option>
+                                </select>
+                            </div>
+                            <div class="col-auto">
+                                <button type="submit" class="btn btn-primary">Search</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <!-- Coupon Table -->
                     <div class="card">
                         <h5 class="card-header">Coupons</h5>
                         <div class="table-responsive text-nowrap">
                             <table class="table">
                                 <thead>
+                                <!-- Coupon ltable header -->
                                 <tr>
                                     <th>Coupon Name</th>
                                     <th>Coupon Code</th>
@@ -63,106 +85,7 @@
                                     <th>End At</th>
                                     <th>Actions</th>
                                 </tr>
-                                <tr>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        <strong>Flash Sale</strong>
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        <strong>FLASH</strong>
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-3"></i>
-                                        Flash sale 50% for all products
-                                    </td>
-                                    <td>
-                                        <span class="badge me-1 bg-label-success">
-                                            PERCENT
-                                        </span></td>
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        50
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        1000
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        01/01/2024
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        31/01/2024
-                                    </td>
-                                    <td>
-                                        <div class="dropdown">
-                                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                                <i class="bx bx-dots-vertical-rounded"></i>
-                                            </button>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="javascript:void(0);"
-                                                ><i class="bx bx-edit-alt me-2"></i>Edit</a
-                                                >
-                                                <a class="dropdown-item" href="javascript:void(0);"
-                                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                                >
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        <strong>Discount 100$</strong>
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        <strong>SALE</strong>
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-3"></i>
-                                        Flash sale 50% for all products
-                                    </td>
-                                    <td>
-                                        <span class="badge me-1 bg-label-success">
-                                            DIRECT
-                                        </span></td>
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        100
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        99
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        01/01/2024
-                                    </td>
-                                    <td>
-                                        <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
-                                        31/01/2024
-                                    </td>
-                                    <td>
-                                        <div class="dropdown">
-                                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                                <i class="bx bx-dots-vertical-rounded"></i>
-                                            </button>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="javascript:void(0);"
-                                                ><i class="bx bx-edit-alt me-2"></i>Edit</a
-                                                >
-                                                <a class="dropdown-item" href="javascript:void(0);"
-                                                ><i class="bx bx-trash me-2"></i> Delete</a
-                                                >
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
+                                <!-- Coupon list -->
                                 <tr th:each="coupon : ${coupons}">
                                     <td>
                                         <i class="fab fa-bootstrap fa-lg text-primary me-1"></i>
