--- a/src/main/resources/templates/admin/category/createCategory.html
+++ b/src/main/resources/templates/admin/category/createCategory.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 
 <!-- =========================================================
 * Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
@@ -20,7 +20,7 @@
         data-assets-path="../../admin/assets/"
         data-template="vertical-menu-template-free"
 >
-<head th:replace="admin/fragments/layout :: head" />
+<head th:replace="~{admin/fragments/layout :: head}" />
 
 <body>
 <!-- Layout wrapper -->
@@ -28,14 +28,14 @@
     <div class="layout-container">
         <!-- Menu -->
 
-        <aside id="layout-menu" th:replace="admin/fragments/layout :: sidebar" class="layout-menu menu-vertical menu bg-menu-theme"></aside>
+        <aside id="layout-menu" th:replace="~{admin/fragments/layout :: sidebar}" class="layout-menu menu-vertical menu bg-menu-theme"></aside>
         <!-- / Menu -->
 
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
 
-            <nav th:replace="admin/fragments/layout :: navbar" />
+            <nav th:replace="~{admin/fragments/layout :: navbar}" />
 
             <!-- / Navbar -->
 
@@ -45,7 +45,6 @@
 
                 <div class="container-xxl flex-grow-1 container-p-y">
                     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Category/</span> Create New</h4>
-
                     <!-- Basic Layout -->
                     <div class="row">
                         <div class="col-xl">
@@ -55,49 +54,61 @@
                                     <small class="text-muted float-end">Default label</small>
                                 </div>
                                 <div class="card-body">
-                                    <form>
+                                    <form th:action="@{/admin/category/processForm}" th:object="${categoryDTO}" method="post"
+                                          class="needs-validation" novalidate enctype="multipart/form-data">
                                         <div class="mb-3">
-                                            <label class="form-label" for="basic-default-fullname">Full Name</label>
-                                            <input type="text" class="form-control" id="basic-default-fullname" placeholder="John Doe" />
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label" for="basic-default-company">Company</label>
-                                            <input type="text" class="form-control" id="basic-default-company" placeholder="ACME Inc." />
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label" for="basic-default-email">Email</label>
-                                            <div class="input-group input-group-merge">
-                                                <input
-                                                        type="text"
-                                                        id="basic-default-email"
-                                                        class="form-control"
-                                                        placeholder="john.doe"
-                                                        aria-label="john.doe"
-                                                        aria-describedby="basic-default-email2"
-                                                />
-                                                <span class="input-group-text" id="basic-default-email2">@example.com</span>
-                                            </div>
-                                            <div class="form-text">You can use letters, numbers & periods</div>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label" for="basic-default-phone">Phone No</label>
+                                            <label class="form-label" for="category-name">Category Name</label>
                                             <input
                                                     type="text"
-                                                    id="basic-default-phone"
-                                                    class="form-control phone-mask"
-                                                    placeholder="658 799 8941"
-                                            />
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label" for="basic-default-message">Message</label>
-                                            <textarea
-                                                    id="basic-default-message"
                                                     class="form-control"
-                                                    placeholder="Hi, Do you have a moment to talk Joe?"
-                                            ></textarea>
+                                                    th:class="${#fields.hasErrors('categoryName')} ? 'form-control is-invalid' : 'form-control'"
+                                                    id="category-name"
+                                                    placeholder="Your Category"
+                                                    th:field="*{categoryName}"
+                                                    required/>
+                                            <div
+                                                 th:class="${#fields.hasErrors('categoryName')}? 'invalid-feedback d-block' : 'invalid-feedback'"
+                                                 th:if="${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}">
+                                            </div>
+
+                                            <div th:if="${categoryExist != null}" class="invalid-feedback d-block">
+                                                <p th:text="${categoryExist}"></p>
+                                            </div>
+
                                         </div>
+
+                                        <div class="mb-3">
+                                            <label for="formFile" class="form-label">Category Image</label>
+                                            <input class="form-control" type="file" id="formFile" name="imageFile"
+                                                   accept="image/*"
+                                                   onchange="loadFile(event)" required>
+                                            <div
+                                                th:class="${#fields.hasErrors('imageFile')}? 'invalid-feedback d-block' : 'invalid-feedback'"
+                                                th:if="${#fields.hasErrors('imageFile')}" th:errors="*{imageFile}">
+                                            </div>
+                                            <div th:if="${error != null}" th:class="${error} != null ? 'invalid-feedback d-block' : 'invalid-feedback'">
+                                                <p th:text="${error}"></p>
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3">
+                                            <img id="preview-image-before-upload" class="rounded mx-auto d-block" />
+                                        </div>
+
+                                        <!-- Add hidden form field to handle update -->
+                                        <input type="hidden" th:field="*{id}"/>
+
                                         <button type="submit" class="btn btn-primary">Send</button>
                                     </form>
+                                </div>
+                            </div>
+
+                            <!-- Previous Image -->
+                            <div class="row mb-4">
+                                <div class="col-sm-4">
+                                    <div class="card" th:if="${prevImageUrl} != null">
+                                        <img th:src="@{'/' + ${prevImageUrl}}">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -106,7 +117,7 @@
                 <!-- / Content -->
 
                 <!-- Footer -->
-                <footer th:replace="admin/fragments/layout :: footer"></footer>
+                <footer th:replace="~{admin/fragments/layout :: footer}"></footer>
                 <!-- / Footer -->
 
                 <div class="content-backdrop fade"></div>
@@ -121,7 +132,42 @@
 </div>
 <!-- / Layout wrapper -->
 
-<div th:replace="admin/fragments/layout :: script"></div>
+<div th:replace="~{admin/fragments/layout :: script}"></div>
+
+<!-- review image  -->
+<script type="text/javascript">
+    function loadFile(event) {
+        if (event.target.files.length > 0) {
+            var previewImage = document.getElementById('preview-image-before-upload');
+            previewImage.src = URL.createObjectURL(event.target.files[0]);
+        }
+    }
+</script>
+
+<!-- Boot Strap Validation-->
+<script type="text/javascript">
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                        form.classList.remove('was-validated')
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+    })()
+</script>
 
 </body>
 </html>
