--- a/src/main/resources/templates/admin/fragments/nav.html
+++ b/src/main/resources/templates/admin/fragments/nav.html
@@ -1,6 +1,6 @@
-<nav    th:fragment="nav-bar"
-        class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
-        id="layout-navbar"
+<nav th:fragment="nav-bar"
+     class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
+     id="layout-navbar"
 >
     <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
         <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
@@ -11,51 +11,64 @@
     <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
         <!-- Search -->
         <div class="navbar-nav align-items-center">
-            <div class="nav-item d-flex align-items-center">
-                <i class="bx bx-search fs-4 lh-0"></i>
-                <input
-                        type="text"
-                        class="form-control border-0 shadow-none"
-                        placeholder="Search..."
-                        aria-label="Search..."
-                />
-            </div>
+            <!--Title-->
+            <h4 class="fw-bold py-3 mb-0">
+                <span class="text-muted fw-light">AdminCP /</span>
+                <span th:text="${value_title}"></span>
+            </h4>
+            <!--End Title-->
         </div>
         <!-- /Search -->
 
         <ul class="navbar-nav flex-row align-items-center ms-auto">
             <!-- Place this tag where you want the button to render. -->
-            <li class="nav-item lh-1 me-3">
-                <a
-                        class="github-button"
-                        href="https://github.com/themeselection/sneat-html-admin-template-free"
-                        data-icon="octicon-star"
-                        data-size="large"
-                        data-show-count="true"
-                        aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
-                >Star</a
-                >
-            </li>
+
 
             <!-- User -->
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online">
-                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                    </div>
+                    <th:block th:if="${userInfo.avatar != null}">
+                        <img th:src="@{'/' + ${userInfo.avatar}}" alt class="h-auto rounded-circle"
+                             width="40px"/>
+                    </th:block>
+                    <th:block th:unless="${userInfo.avatar != null}">
+                        <div class="avatar me-2">
+                                        <span class="avatar-initial rounded-circle bg-label-success">
+                                            <!--Run a javascript return Avatar by Name-->
+                                            <script th:inline="javascript">
+                                                let name = [[${userInfo.fullName}]];
+                                                let nameArray = name.split(" ");
+                                                document.write(nameArray.map(word => word.charAt(0).toUpperCase()).join(""));
+                                            </script>
+                                        </span>
+                        </div>
+                    </th:block>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li>
                         <a class="dropdown-item" href="#">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
-                                    <div class="avatar avatar-online">
-                                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                                    </div>
+                                    <th:block th:if="${userInfo.avatar != null}">
+                                        <img th:src="@{'/' + ${userInfo.avatar}}" alt class="h-auto rounded-circle"
+                                             width="40px"/>
+                                    </th:block>
+                                    <th:block th:unless="${userInfo.avatar != null}">
+                                        <div class="avatar me-2">
+                                        <span class="avatar-initial rounded-circle bg-label-success">
+                                            <!--Run a javascript return Avatar by Name-->
+                                            <script th:inline="javascript">
+                                                let name = [[${userInfo.fullName}]];
+                                                let nameArray = name.split(" ");
+                                                document.write(nameArray.map(word => word.charAt(0).toUpperCase()).join(""));
+                                            </script>
+                                        </span>
+                                        </div>
+                                    </th:block>
                                 </div>
                                 <div class="flex-grow-1">
-                                    <span class="fw-semibold d-block">John Doe</span>
-                                    <small class="text-muted">Admin</small>
+                                    <span th:text="${userInfo.fullName}" class="fw-semibold d-block">Name</span>
+                                    <small th:text="${userInfo.role}" class="text-muted">Role</small>
                                 </div>
                             </div>
                         </a>
@@ -88,7 +101,7 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="auth-login-basic.html">
+                        <a class="dropdown-item" th:href="@{/logout}">
                             <i class="bx bx-power-off me-2"></i>
                             <span class="align-middle">Log Out</span>
                         </a>
