--- a/src/main/resources/templates/client/fragments/head.html
+++ b/src/main/resources/templates/client/fragments/head.html
@@ -9,7 +9,7 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&family=Lobster&display=swap"
           rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
@@ -22,10 +22,12 @@
 
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="/client/css/bootstrap.min.css" rel="stylesheet">
-
+<!--    <link href="/client/css/bootstrap.min.css" rel="stylesheet">-->
+    <link rel="stylesheet" href="/client/css/core.css">
+    <link rel="stylesheet" href="/client/css/theme-default.css">
     <!-- Template Stylesheet -->
     <link href="/client/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/client/css/custom.css">
 </head>
 
 <body>
