--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
-      class="light-style layout-menu-fixed"
+      class="light-style layout-menu-fixed layout-navbar-fixed"
       dir="ltr"
       data-theme="theme-default"
       data-assets-path="../../admin/assets/"
@@ -15,19 +15,16 @@
 <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container">
         <!--đưa giá trị value_menu để so sánh với menu kích hoạt active-->
-        <aside th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'dashboard,restaurants,res_list')}"></aside>
+        <aside th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'dashboard')}"></aside>
         <div class="layout-page">
-            <nav th:replace="~{admin/fragments/nav :: nav-bar}"></nav>
+            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title='Dashboard')}"></nav>
             <div class="content-wrapper">
                 <div class="container-xxl flex-grow-1 container-p-y">
-                    <!--Title-->
-                    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">AdminCP /</span> Dashboard</h4>
-                    <!--End Title-->
                     <!--Content-->
                     <div class="card">
                         <h5 class="card-header">Title</h5>
                         <div class="card-body">
-                            <div class="card-content min-vh-100">
+                            <div class="card-content ">
                                 <!--Nhớ bỏ min-vh-100 -->
                                 Content in Here
                             </div>
