--- a/src/main/resources/templates/client/fragments/footer.html
+++ b/src/main/resources/templates/client/fragments/footer.html
@@ -6,19 +6,12 @@
             <div class="row g-4">
                 <div class="col-lg-3">
                     <a href="#">
-                        <h1 class="text-primary mb-0">Fruitables</h1>
-                        <p class="text-secondary mb-0">Fresh products</p>
+                        <h1 class="text-primary mb-0">GắpFood</h1>
+                        <p class="text-secondary mb-0">Mỗi gắp là một món ngon :3</p>
                     </a>
                 </div>
                 <div class="col-lg-6">
-                    <div class="position-relative mx-auto">
-                        <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number"
-                               placeholder="Your Email">
-                        <button type="submit"
-                                class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white"
-                                style="top: 0; right: 0;">Subscribe Now
-                        </button>
-                    </div>
+
                 </div>
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-end pt-3">
@@ -37,9 +30,9 @@
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
                 <div class="footer-item">
-                    <h4 class="text-light mb-3">Why People Like us!</h4>
-                    <p class="mb-4">typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                    <h4 class="text-light mb-3">About project!</h4>
+                    <p class="mb-4">Project có những ngôn từ và hình ảnh lấy từ chia sẻ mạng trực tuyến và sử dụng cho project mục đích học tập.Có một chút yếu tố làm vui vẻ giảm stress...
+                       Make project for fun!</p>
                     <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
                 </div>
             </div>
@@ -72,7 +65,7 @@
                     <p>Email: Example@gmail.com</p>
                     <p>Phone: +0123 4567 8910</p>
                     <p>Payment Accepted</p>
-                    <img src="client/img/payment.png" class="img-fluid" alt="">
+                    <img src="/client/img/payment.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -85,14 +78,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2">
+                <span id="year-ver"></span>
+                </i>Project GắpFood</a>, All right reserved.</span>
             </div>
             <div class="col-md-6 my-auto text-center text-md-end text-white">
-                <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a
-                    class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                Designed By Me
             </div>
         </div>
     </div>
@@ -101,6 +92,23 @@
 
 
 <!-- Back to Top -->
-<a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i
-        class="fa fa-arrow-up"></i></a>
+<a href="#" id="backToTop" class="btn btn-primary border-3 border-primary rounded-circle backToTop">
+    <i
+        class="fa fa-arrow-up"></i>
+</a>
+
+    <script>
+        window.onscroll = function() {
+            if (
+                document.body.scrollTop > 100 ||
+                document.documentElement.scrollTop > 100
+            ) {
+                document.getElementById("backToTop").style.cssText =
+                    "display: grid; animation-name: fadeIn";
+            } else {
+                document.getElementById("backToTop").style.cssText =
+                    "display: none; animation-name: fadeOut";
+            }
+        };
+    </script>
 </div>
