--- a/src/main/resources/templates/admin/category/categoryList.html
+++ b/src/main/resources/templates/admin/category/categoryList.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
-
-<!-- =========================================================
-* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
-==============================================================
-
-* Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
-* Created by: ThemeSelection
-* License: You must have a valid license purchased in order to legally use the theme for your project.
-* Copyright ThemeSelection (https://themeselection.com)
-
-=========================================================
- -->
-<!-- beautify ignore:start -->
 <html
         lang="en" xmlns:th="http://www.thymeleaf.org"
         class="light-style layout-menu-fixed"
         dir="ltr"
         data-theme="theme-default"
-        data-assets-path="../../admin/assets/"
+        data-assets-path="/admin/assets/"
         data-template="vertical-menu-template-free"
 >
-<head th:replace="~{admin/fragments/layout :: head}" />
+<head th:replace="~{admin/fragments/head :: heads(pageTitle='List Categories')}">
+    <title></title>
+</head>
 
 
 <body>
@@ -28,18 +17,13 @@
 <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container">
         <!-- Menu -->
-
-        <aside id="layout-menu" th:replace="~{admin/fragments/layout :: sidebar}" class="layout-menu menu-vertical menu bg-menu-theme"></aside>
+        <aside th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'categories,categories_list')}"></aside>
         <!-- / Menu -->
-
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
-
-            <nav th:replace="~{admin/fragments/layout :: navbar}" />
-
+            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Categories List')}" />
             <!-- / Navbar -->
-
             <!-- Content wrapper -->
             <div class="content-wrapper">
                 <!-- Content -->
@@ -118,27 +102,21 @@
                         </div>
                     </div>
                     <!--/ Basic Bootstrap Table -->
-
                 </div>
                 <!-- / Content -->
-
                 <!-- Footer -->
-                <footer th:replace="~{admin/fragments/layout :: footer}"></footer>
+                <footer th:replace="~{admin/fragments/footer :: footer}"></footer>
                 <!-- / Footer -->
-
                 <div class="content-backdrop fade"></div>
             </div>
             <!-- Content wrapper -->
         </div>
         <!-- / Layout page -->
     </div>
-
     <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
 </div>
 <!-- / Layout wrapper -->
-
-<div th:replace="~{admin/fragments/layout :: script}"></div>
-
+<div th:replace="~{admin/fragments/js :: js-insert}"></div>
 </body>
 </html>
