--- a/src/main/resources/templates/admin/category/createCategory.html
+++ b/src/main/resources/templates/admin/category/createCategory.html
@@ -1,58 +1,41 @@
 <!DOCTYPE html >
-
-<!-- =========================================================
-* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
-==============================================================
-
-* Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
-* Created by: ThemeSelection
-* License: You must have a valid license purchased in order to legally use the theme for your project.
-* Copyright ThemeSelection (https://themeselection.com)
-
-=========================================================
- -->
-<!-- beautify ignore:start -->
 <html
         lang="en" xmlns:th="http://www.thymeleaf.org"
         class="light-style layout-menu-fixed"
         dir="ltr"
         data-theme="theme-default"
-        data-assets-path="../../admin/assets/"
+        data-assets-path="/admin/assets/"
         data-template="vertical-menu-template-free"
 >
-<head th:replace="~{admin/fragments/layout :: head}" />
+<head th:replace="~{admin/fragments/head :: heads(pageTitle='Create Category')}">
+    <title></title>
+</head>
 
 <body>
 <!-- Layout wrapper -->
 <div class="layout-wrapper layout-content-navbar">
     <div class="layout-container">
         <!-- Menu -->
-
-        <aside id="layout-menu" th:replace="~{admin/fragments/layout :: sidebar}" class="layout-menu menu-vertical menu bg-menu-theme"></aside>
+        <aside th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'categories,categories_create')}"></aside>
         <!-- / Menu -->
-
         <!-- Layout container -->
         <div class="layout-page">
             <!-- Navbar -->
-
-            <nav th:replace="~{admin/fragments/layout :: navbar}" />
-
+            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Create Category')}" />
             <!-- / Navbar -->
-
             <!-- Content wrapper -->
             <div class="content-wrapper">
                 <!-- Content -->
-
                 <div class="container-xxl flex-grow-1 container-p-y">
                     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Category/</span> Create New</h4>
                     <!-- Basic Layout -->
                     <div class="row">
                         <div class="col-xl">
                             <div class="card mb-4">
-                                <div class="card-header d-flex justify-content-between align-items-center">
-                                    <h5 class="mb-0">Basic Layout</h5>
-                                    <small class="text-muted float-end">Default label</small>
-                                </div>
+<!--                                <div class="card-header d-flex justify-content-between align-items-center">-->
+<!--                                    <h5 class="mb-0">Basic Layout</h5>-->
+<!--                                    <small class="text-muted float-end">Default label</small>-->
+<!--                                </div>-->
                                 <div class="card-body">
                                     <form th:action="@{/admin/category/processForm}" th:object="${categoryDTO}" method="post"
                                           class="needs-validation" novalidate enctype="multipart/form-data">
@@ -115,24 +98,20 @@
                     </div>
                 </div>
                 <!-- / Content -->
-
                 <!-- Footer -->
-                <footer th:replace="~{admin/fragments/layout :: footer}"></footer>
+                <footer th:replace="~{admin/fragments/footer :: footer}"></footer>
                 <!-- / Footer -->
-
                 <div class="content-backdrop fade"></div>
             </div>
             <!-- Content wrapper -->
         </div>
         <!-- / Layout page -->
     </div>
-
     <!-- Overlay -->
     <div class="layout-overlay layout-menu-toggle"></div>
 </div>
 <!-- / Layout wrapper -->
-
-<div th:replace="~{admin/fragments/layout :: script}"></div>
+<div th:replace="~{admin/fragments/js :: js-insert}"></div>
 
 <!-- review image  -->
 <script type="text/javascript">
